<resources>
    <string name="app_name">DailyHoroscope</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>

    <string name="welcome">Welcome to your daily horoscope!</string>
    <string name="welcomeInstructions">Please use the constellation button to select your zodiac sign</string>

    <string name="whatIsMySign">What\'s my sign?</string>
    <string name="selectIsyourSign">Select Your Zodiac Sign:</string>

    <string name="Today">Today</string>
    <string name="Yesterday">Yesterday</string>
    <string name="Tomorrow">Tomorrow</string>


    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>

    <string name="horoscopeDateRangeLabel">Born: </string>
    <string name="horoscopeDescriptionLabel">Prediction:</string>
    <string name="horoscopeCompatibilityLabel">Compatibility:</string>
    <string name="horoscopeMoodLabel">Mood:</string>
    <string name="horoscopeColorLabel">Color:</string>
    <string name="horoscopeLuckyNumberLabel">Lucky Number:</string>
    <string name="horoscopeLuckyTimeLabel">Lucky Time:</string>


</resources>